prune of api nodejs service to fit the stack
Part of the effort to allow private instances.

Thanks Matt for the quick fix on the api and the idea for the prune.

--- a/deploy/basic/Dockerfile
+++ b/deploy/basic/Dockerfile
@@ -55,11 +55,11 @@ FROM node:12-alpine as api-builder
 WORKDIR /app/api
 COPY src/api/. .
 
-# Prune
-RUN rm -rf test scripts node_modules
+# Prune (prom-client removed to fix KBs for orm stack)
+RUN rm -rf test scripts && \
+    npm uninstall prom-client && \
+    npm prune --production
 
-# Fat package for private nodes
-RUN npm ci --production
 #    ----- API Gateway -----  #
 
 ###############################
