suport for lpg on the stack

--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -49,6 +49,8 @@ groupings:
     - lb_shape
     - lb_compartment_ocid
     - create_secondary_vcn
+    - create_lpg_policies_for_group
+    - user_admin_group_for_lpg_policy
 
   - title: "Advanced Resource Options - Compute"
     variables:
@@ -243,6 +245,31 @@ variables:
       and:
         - and:
           - show_advanced
+        - not:
+          - use_only_always_free_elegible_resources
+
+  create_lpg_policies_for_group:
+    type: boolean
+    title: "Create policies for the user group to manage vault and keys?"
+    description: "Creates policies to allow the user applying the stack to manage vault and keys. If you are on the Administrators group or already have the policies for a compartment, this policy is not needed. If you do not have access to allow the policy, ask your administrator to include it for you."
+    visible:
+      and:
+        - and:
+          - show_advanced
+          - create_secondary_vcn
+        - not:
+          - use_only_always_free_elegible_resources
+
+  user_admin_group_for_lpg_policy:
+    type: string
+    title: "Specific your group to include the policy"
+    description: "Identity Group to allow manage vault and keys."
+    visible:
+      and:
+        - and:
+          - show_advanced
+          - create_secondary_vcn
+          - create_lpg_policies_for_group
         - not:
           - use_only_always_free_elegible_resources
 
