--- a/deploy/basic/terraform/scripts/cloud-config.template.yaml
+++ b/deploy/basic/terraform/scripts/cloud-config.template.yaml
@@ -37,13 +37,27 @@ write_files:
     encoding: "gzip+base64"
     content: |
       ${mushop_media_pars_list_content}
+  - path: "/etc/systemd/system/mushop.service"
+    permissions: "0644"
+    content: |
+      [Unit]
+      Description=MuShop Basic service.
+
+      [Service]
+      Type=simple
+      ExecStart=/bin/bash /root/entrypoint.sh
+
+      [Install]
+      WantedBy=multi-user.target
 
 runcmd:
  - echo "Running prep scripts..."
  - /root/setup.preflight.sh
  - echo "Finished prep scripts."
  - echo "Starting App..."
- - /root/entrypoint.sh >/root/mushop.log 2>&1 &
+ - systemctl start mushop
+ - systemctl enable mushop
+ - systemctl status mushop
 
 final_message: "The system is finally up, after $UPTIME seconds"
 output: {all: '| tee -a /root/cloud-init-output.log'}
