--- a/deploy/basic/terraform/scripts/cloud-config.template.yaml
+++ b/deploy/basic/terraform/scripts/cloud-config.template.yaml
@@ -37,15 +37,42 @@ write_files:
     encoding: "gzip+base64"
     content: |
       ${mushop_media_pars_list_content}
-  - path: "/etc/systemd/system/mushop.service"
+  - path: "/root/mushop.env"
+    permissions: "0777"
+    content: |
+      MOCK_MODE=${mock_mode}
+      NODE_ENV=production
+      CATALOGUE_PORT=${catalogue_port}
+      CATALOGUE_URL=http://localhost:${catalogue_port}
+      OADB_USER=catalogue_user
+      OADB_PW='${catalogue_password}'
+      OADB_SERVICE=${db_name}_tp
+      STATIC_MEDIA_URL=${assets_url}
+  - path: "/etc/systemd/system/mushop_api.service"
     permissions: "0644"
     content: |
       [Unit]
-      Description=MuShop Basic service.
+      Description=MuShop Basic - API service
+      After=network.target
 
       [Service]
       Type=simple
-      ExecStart=/bin/bash /root/entrypoint.sh
+      EnvironmentFile=/root/mushop.env
+      ExecStart=/bin/node /app/api/server.js
+
+      [Install]
+      WantedBy=multi-user.target
+  - path: "/etc/systemd/system/mushop_catalogue.service"
+    permissions: "0644"
+    content: |
+      [Unit]
+      Description=MuShop Basic - Catalogue service
+      After=network.target
+
+      [Service]
+      Type=simple
+      EnvironmentFile=/root/mushop.env
+      ExecStart=/app/catalogue/catalogue
 
       [Install]
       WantedBy=multi-user.target
@@ -55,9 +82,12 @@ runcmd:
  - /root/setup.preflight.sh
  - echo "Finished prep scripts."
  - echo "Starting App..."
- - systemctl start mushop
- - systemctl enable mushop
- - systemctl status mushop
+ - systemctl start mushop_api
+ - systemctl enable mushop_api
+ - systemctl start mushop_catalogue
+ - systemctl enable mushop_catalogue
+ - systemctl start httpd
+ - systemctl enable httpd
 
 final_message: "The system is finally up, after $UPTIME seconds"
 output: {all: '| tee -a /root/cloud-init-output.log'}
