--- a/src/orders/build.gradle
+++ b/src/orders/build.gradle
@@ -45,6 +45,26 @@ dependencies {
   }
 
   testImplementation 'com.openpojo:openpojo:0.8.12'
+ 
+  // Newly added dependencies for OCI SDK
+  implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+	implementation 'org.springframework.data:spring-data-rest-hal-browser'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'io.prometheus:simpleclient_spring_boot:0.0.21'
+	implementation 'io.prometheus:simpleclient_hotspot:0.0.21'
+	implementation 'io.prometheus:simpleclient_servlet:0.0.21'
+	implementation 'com.oracle.oci:oci-java-sdk:1.25.1'
+	implementation 'org.apache.commons:commons-lang3:3.8.1'
+	implementation 'org.bouncycastle:bcpkix-jdk15on:1.60'
+	implementation 'org.json:json:20180130'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
 
