baseURL to relative

--- a/src/docs/config.toml
+++ b/src/docs/config.toml
@@ -3,10 +3,12 @@
 # The Universal Permissive License (UPL), Version 1.0
 #
 baseURL = "https://oracle-quickstart.github.io/oci-cloudnative/"
+baseURL = ""
 languageCode = "en-us"
 title = "MuShop"
 theme = "redwood"
 relativeURLs = true
+# canonifyURLs = true
 
 [params]
 editURL = "https://github.com/oracle-quickstart/oci-cloudnative/tree/master/docs/content/"
