golang and oraclelinux bump and arch variables

--- a/src/catalogue/Dockerfile
+++ b/src/catalogue/Dockerfile
@@ -4,10 +4,12 @@
 # 
 
 ##### Oracle Instant Client version
-ARG clientVersion=19.3
+ARG clientVersion=19.9
+ARG ARCH=amd64
+ARG OS=linux
 
 ##### Go Builder image
-FROM golang:1.14 AS go-builder
+FROM golang:1.15 AS go-builder
 WORKDIR /go/src/mushop/catalogue
 
 # Support for Offline local image. Online image on OCI Object Storage
@@ -19,12 +21,12 @@ COPY *.go /go/src/mushop/catalogue/
 COPY go.mod /go/src/mushop/catalogue/
 
 # Build Catalogue service
-RUN GOARCH=amd64 GOOS=linux \
+RUN GOARCH=${ARCH} GOOS=${OS} \
   go build -a \
   -o /app mushop/catalogue/cmd/cataloguesvc
 
 ##### Base image with Oracle Instant Client Basic Lite
-FROM oraclelinux:7-slim AS base
+FROM oraclelinux:8-slim AS base
 ARG clientVersion
 RUN yum update -y && \
   yum -y install oracle-release-el7 && \
@@ -32,6 +34,9 @@ RUN yum update -y && \
   yum -y install oracle-instantclient${clientVersion}-basiclite && \
   yum clean all && \
   rm -rf /var/cache/yum
+## Workaround to support current implementation. Will go away when fix issue #138
+RUN ln -sfF /usr/lib/oracle/${clientVersion}/client64/lib/network/admin/ /usr/lib/oracle/19.3/client64/lib/network/admin/
+##
 
 ##### Catalogue Service Image
 FROM base
@@ -42,6 +47,10 @@ COPY images/ /images/
 
 RUN	setcap 'cap_net_bind_service=+ep' /app
 
-VOLUME ["/usr/lib/oracle/${clientVersion}/client64/lib/network/admin/"]
+## Workaround to support current implementation. Will go away when fix issue #138
+VOLUME ["/usr/lib/oracle/19.3/client64/lib/network/admin/"]
+# VOLUME ["/usr/lib/oracle/${clientVersion}/client64/lib/network/admin/"] 
+##
+
 CMD ["/app", "-port=80"]
 EXPOSE 80
