--- a/src/catalogue/Dockerfile
+++ b/src/catalogue/Dockerfile
@@ -4,7 +4,7 @@
 # 
 
 ##### Oracle Instant Client version
-ARG clientVersion=19.9
+ARG clientVersion=21
 ARG ARCH=amd64
 ARG OS=linux
 
@@ -23,34 +23,33 @@ COPY go.mod /go/src/mushop/catalogue/
 # Build Catalogue service
 RUN GOARCH=${ARCH} GOOS=${OS} \
   go build -a \
-  -o /app mushop/catalogue/cmd/cataloguesvc
+  -o /catalogue mushop/catalogue/cmd/cataloguesvc
 
 ##### Base image with Oracle Instant Client Basic Lite
 FROM oraclelinux:8-slim AS base
 ARG clientVersion
-RUN yum update -y && \
-  yum -y install oracle-release-el7 && \
-  yum-config-manager --enable ol7_oracle_instantclient && \
-  yum -y install oracle-instantclient${clientVersion}-basiclite && \
-  yum clean all && \
-  rm -rf /var/cache/yum
-## Workaround to support current implementation. Will go away when fix issue #138
-RUN ln -sfF /usr/lib/oracle/${clientVersion}/client64/lib/network/admin/ /usr/lib/oracle/19.3/client64/lib/network/admin/
-##
+RUN microdnf update && \
+    microdnf install oracle-instantclient-release-el8 && \
+    microdnf install oracle-instantclient-basiclite && \
+    microdnf clean all && \
+    rm -rf /var/cache/dnf && \
+    rm -rf /var/cache/yum
 
 ##### Catalogue Service Image
 FROM base
 ARG clientVersion
 WORKDIR /
-COPY --from=go-builder /app /app
+COPY --from=go-builder /catalogue /catalogue
 COPY images/ /images/
 
-RUN	setcap 'cap_net_bind_service=+ep' /app
+RUN	setcap 'cap_net_bind_service=+ep' /catalogue
 
 ## Workaround to support current implementation. Will go away when fix issue #138
+RUN mkdir -p /usr/lib/oracle/19.3/client64/lib/network/ && \
+    ln -sfF /usr/lib/oracle/${clientVersion}/client64/lib/network/admin/ /usr/lib/oracle/19.3/client64/lib/network/ 
 VOLUME ["/usr/lib/oracle/19.3/client64/lib/network/admin/"]
 # VOLUME ["/usr/lib/oracle/${clientVersion}/client64/lib/network/admin/"] 
-##
+## ##
 
-CMD ["/app", "-port=80"]
+CMD ["/catalogue", "-port=80"]
 EXPOSE 80
