--- a/src/dbtools/Dockerfile
+++ b/src/dbtools/Dockerfile
@@ -4,23 +4,25 @@
 # 
 
 ##### Oracle Instant Client version
-ARG clientVersion=19.5
+ARG clientVersion=21
 
-FROM oraclelinux:7-slim
+FROM oraclelinux:8-slim
 ARG clientVersion
-RUN yum -y upgrade && \
-  yum -y update && \
-  yum -y install jq && \
-  yum -y install oracle-release-el7 && \
-  yum-config-manager --enable ol7_oracle_instantclient && \
-  yum -y install oracle-instantclient${clientVersion}-sqlplus && \
-  yum -y install oracle-instantclient${clientVersion}-tools && \
-  yum clean all && \
-  rm -rf /var/cache/yum
+RUN microdnf update && \
+    microdnf install oracle-instantclient-release-el8 && \
+    microdnf install oracle-instantclient-basic && \
+    microdnf install oracle-instantclient-sqlplus && \
+    microdnf install oracle-instantclient-tools && \
+    microdnf clean all && \
+    rm -rf /var/cache/dnf && \
+    rm -rf /var/cache/yum
 
 ENV PATH=$PATH:/usr/lib/oracle/${clientVersion}/client64/bin/
 
 WORKDIR /work
 VOLUME ["/usr/lib/oracle/${clientVersion}/client64/lib/network/admin/"]
+## Workaround to support current implementation. Will go away when fix issue #138
+VOLUME ["/usr/lib/oracle/19.3/client64/lib/network/admin/"]
+## ##
 
 CMD ["/bin/sh","-c","echo","Nothing to run"]
