volumes supporting new and old volumes

--- a/src/catalogue/Dockerfile
+++ b/src/catalogue/Dockerfile
@@ -44,11 +44,11 @@ COPY images/ /images/
 
 RUN	setcap 'cap_net_bind_service=+ep' /catalogue
 
+VOLUME ["/usr/lib/oracle/${clientVersion}/client64/lib/network/admin/"]
 ## Workaround to support current implementation. Will go away when fix issue #138
 RUN mkdir -p /usr/lib/oracle/19.3/client64/lib/network/ && \
     ln -sfF /usr/lib/oracle/${clientVersion}/client64/lib/network/admin/ /usr/lib/oracle/19.3/client64/lib/network/ 
 VOLUME ["/usr/lib/oracle/19.3/client64/lib/network/admin/"]
-# VOLUME ["/usr/lib/oracle/${clientVersion}/client64/lib/network/admin/"] 
 ## ##
 
 CMD ["/catalogue", "-port=80"]
