fix uikit version because of 3.6.6 bugs

--- a/src/docs/themes/redwood/package.json
+++ b/src/docs/themes/redwood/package.json
@@ -12,7 +12,7 @@
     "autocomplete.js": "^0.37.1",
     "lunr": "^2.3.9",
     "mermaid": "^8.8.4",
-    "uikit": "^3.6.3",
+    "uikit": "3.6.5",
     "whatwg-fetch": "^3.5.0"
   }
 }
