--- a/src/docs/config.toml
+++ b/src/docs/config.toml
@@ -11,7 +11,7 @@ relativeURLs = true
 [params]
 editURL = "https://github.com/oracle-quickstart/oci-cloudnative/tree/master/docs/content/"
 showVisitedLinks = false
-author = "Oracle A-Team Alumni"
+author = "Oracle Developers"
 organization = "Oracle"
 description = "Oracle Cloud Native Workshop"
 keywords = ["Kubernetes", "OCI", "OKE", "Microservices"]
