--- a/deploy/basic/terraform/terraform.tfvars.example
+++ b/deploy/basic/terraform/terraform.tfvars.example
@@ -30,9 +30,11 @@ public_ssh_key                      = ""
 is_pv_encryption_in_transit_enabled = false
 
 # Network Details
-lb_shape             = "10Mbps-Micro"
-lb_compartment_ocid  = "" # e.g.: "ocid1.compartment..." 
-create_secondary_vcn = false
+lb_shape                                   = "flexible"
+lb_shape_details_minimum_bandwidth_in_mbps = 10
+lb_shape_details_maximum_bandwidth_in_mbps = 10
+lb_compartment_ocid                        = "" # e.g.: "ocid1.compartment..." 
+create_secondary_vcn                       = false
 
 # Autonomous Database
 autonomous_database_license_model            = "LICENSE_INCLUDED" # LICENSE_INCLUDED or BRING_YOUR_OWN_LICENSE
