--- a/deploy/basic/terraform/schema.yaml
+++ b/deploy/basic/terraform/schema.yaml
@@ -220,6 +220,34 @@ variables:
       not:
         - use_only_always_free_elegible_resources
 
+  instance_ocpus:
+    type: integer
+    minimum: 1
+    maximum: 64
+    title: "Number of OCPUs"
+    description: "You can customize the number of OCPUs to a flexible shape."
+    visible:
+      and:
+        - not:
+          - use_only_always_free_elegible_resources
+        - eq:
+          - instance_shape 
+          - "VM.Standard.E3.Flex"
+
+  instance_shape_config_memory_in_gbs:
+    type: integer
+    minimum: 1
+    maximum: 1024
+    title: "Amount of memory (GB)"
+    description: "You can customize the amount of memory allocated to a flexible shape."
+    visible:
+      and:
+        - not:
+          - use_only_always_free_elegible_resources
+        - eq:
+          - instance_shape 
+          - "VM.Standard.E3.Flex"
+
   image_operating_system:
     type: string
     title: "Compute Image OS"
