--- a/deploy/basic/terraform/tf_msz.tfvars.example
+++ b/deploy/basic/terraform/tf_msz.tfvars.example
@@ -23,7 +23,9 @@ region = "us-phoenix-1"
 
 # Compute
 num_nodes                           = 2
-instance_shape                      = "VM.Standard2.1"
+instance_shape                      = "VM.Standard.E3.Flex"
+instance_ocpus                      = 1 # instance_ocpus only used when instance_shape is a flex compute shape
+instance_shape_config_memory_in_gbs = 16 # instance_shape_config_memory_in_gbs only used when instance_shape is a flex compute shape
 instance_visibility                 = "Private"
 generate_public_ssh_key             = true
 public_ssh_key                      = ""
